# prompt-eval

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/evaluator/: eval.py  human_eval.py  llm_eval.py  web.py  worker.py
backend/finetune/: main.py  utils.py
backend/notenook/: Structure decomposition.ipynb  data.jsonl
frontend/: App.tsx  Dockerfile  README.md  index.html  metadata.json  package.json  types.ts  vite.config.ts
frontend/components/: Dashboard.tsx  DetailView.tsx  MetricCard.tsx  RadarSummary.tsx
frontend/hooks/: useEvals.ts
litellm/: config.yaml  hook.py
