[project]
name = "prompt-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "click>=8.3.1",
    "fastapi[standard]>=0.121.3",
    "jupyter>=1.1.1",
    "litellm>=1.80.5",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "scipy>=1.16.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "peft>=0.18.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tqdm>=4.67.1",
    "trl>=0.25.1",
]
